# nasa-hunt-for-exoplanet

./: .env.template  .gitignore  README.md  README_SERP_SETUP.md  SERP_INTEGRATION_SUMMARY.md  STREAMLIT_GUIDE.md  app.py  educational_search.py  fetch_exo_data.py  launch_app.py  main.py  pyproject.toml  requirements.txt  spectroscopy_scanner.py  streamlit_serp_test.py  test_serp_api.py
data/: exoplanet_data_cleaned.csv  exoplanet_pipeline_full_notebook.ipynb  exoplanet_streamlit_app.py  fetch_summary.json  headers_k2planets.txt  headers_koi.txt  headers_toi.txt  sources.md  unified_exoplanets_raw_rebuilt_from_notebook.csv
docs/: FeatureCleanup.md  Future.md  ProjectGoals.md  ProjectSetup.md  TODO.md  prompts.md
frontend/: main.py
notebooks/: analyze_k2_data.ipynb  analyze_koi_data.ipynb  analyze_toi_data.ipynb  data-cleanup.ipynb  data-consolidation.ipynb  datacleanup.ipynb  training.ipynb
