[project]
name = "nasa-experiments"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "pandas-stubs==2.3.2.250926",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
